--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "node":"`13.1.0",
     "npm":"`6.12.1"
   },
+  "engines": {
+    "node":"`13.1.0",
+    "npm":"`6.12.1"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.19",
     "@angular/cli": "~8.3.19",
