--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
-    "typescript": "~3.5.3",
-    "node":"`13.1.0",
-    "npm":"`6.12.1"
+    "typescript": "~3.5.3"
   },
   "engines": {
     "node":"13.1.0",
