--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-webstorage-service": "^1.0.2",
     "express": "^4.17.1",
     "ng5-slider": "^1.2.4",
     "path": "^0.12.7",
